--- a/index.html
+++ b/index.html
@@ -8,11 +8,45 @@
    <link rel="stylesheet" href="./css/style.css"></head>
 <body>
     <canvas id="canvas" class="" width="300" height="300"></canvas>
-    <div id="set" class="set draw">
-        <button id="brush">画笔</button>
-        <button id="eraser">橡皮擦</button>
+    <div id="set" class="set">
+            <svg id="brush" class="icon brush modelActive">
+                <use xlink:href="#icon-brush"></use>
+            </svg>
+            <svg id="eraser" class="icon eraser">
+                <use xlink:href="#icon-eraser"></use>
+            </svg>
+            <svg id="empty" class="icon empty">
+                <use xlink:href="#icon-empty"></use>
+            </svg>
+            <svg id="download" class="icon download">
+                <use xlink:href="#icon-download"></use>
+            </svg>
     </div>
+    <ul id="lineWidthWaper" class="lineWidth"><li id="thin" class="thin"></li><li id="middle" class="middle" ></li><li id="thick" class="thick"></li></ul>
+    <svg id="palette" class="icon palette">
+        <use xlink:href="#icon-palette"></use>
+    </svg>
+    <ol id="colors" class="colors">
+        <li id="black" class="color black"></li>
+        <li id="gray" class="color gray"></li>
+        <li id="lilac" class="color lilac"></li>
+        <li id="green" class="color green"></li>
+        <li id="emerald" class="color emerald"></li>
+        <li id="springGreen" class="color springGreen"></li>
+        <li id="cyan" class="color cyan"></li>
+        <li id="turquoise" class="color turquoise"></li>
+        <li id="azure" class="color azure"></li>
+        <li id="blue" class="color blue"></li>
+        <li id="pansy" class="color pansy"></li>
+        <li id="purple" class="color purple"></li>
+        <li id="camellia" class="color camellia"></li>
+        <li id="crimson" class="color crimson"></li>
+        <li id="red" class="color red"></li>
+        <li id="orange" class="color orange"></li>
+        <li id="yellow" class="color yellow"></li> 
+    </ol>
     <script src="./js/main.js"></script>
+    <script src="//at.alicdn.com/t/font_526973_i47y4c1jhpwx9a4i.js"></script>
 </body>
 
 </html>
