优化 选择线宽 模式

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <use xlink:href="#icon-download"></use>
             </svg>
     </div>
-    <ul id="lineWidthWaper" class="lineWidth"><li id="thin" class="thin"></li><li id="middle" class="middle" ></li><li id="thick" class="thick"></li></ul>
+    <ul id="lineWidthWaper" class="lineWidth"><li id="thin" class="thin activeLineWidth"></li><li id="middle" class="middle" ></li><li id="thick" class="thick"></li></ul>
     <svg id="palette" class="icon palette">
         <use xlink:href="#icon-palette"></use>
     </svg>
