--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>drawing-board</title>
-   <link rel="stylesheet" href="./css/style.css"></head>
+   <link rel="stylesheet" href="./css/style.css">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+</head>
 <body>
     <canvas id="canvas" class="" width="300" height="300"></canvas>
     <div id="set" class="set">
@@ -27,23 +29,23 @@
         <use xlink:href="#icon-palette"></use>
     </svg>
     <ol id="colors" class="colors">
-        <li id="black" class="color black"></li>
-        <li id="gray" class="color gray"></li>
-        <li id="lilac" class="color lilac"></li>
-        <li id="green" class="color green"></li>
-        <li id="emerald" class="color emerald"></li>
-        <li id="springGreen" class="color springGreen"></li>
-        <li id="cyan" class="color cyan"></li>
-        <li id="turquoise" class="color turquoise"></li>
-        <li id="azure" class="color azure"></li>
-        <li id="blue" class="color blue"></li>
-        <li id="pansy" class="color pansy"></li>
-        <li id="purple" class="color purple"></li>
-        <li id="camellia" class="color camellia"></li>
-        <li id="crimson" class="color crimson"></li>
-        <li id="red" class="color red"></li>
-        <li id="orange" class="color orange"></li>
-        <li id="yellow" class="color yellow"></li> 
+        <li id="black" class="color black" style="background-color: black;"></li>
+        <li id="gray" class="color gray" style=" background-color: gray;"></li>
+        <li id="lilac" class="color lilac" style=" background-color: #B399FF;"></li>
+        <li id="green" class="color green" style=" background-color:green;"></li>
+        <li id="emerald" class="color emerald" style=" background-color: #50C878;"></li>
+        <li id="springGreen" class="color springGreen" style=" background-color: #00FF80;"></li>
+        <li id="cyan" class="color cyan" style=" background-color:cyan;"></li>
+        <li id="turquoise" class="color turquoise" style=" background-color: #30D5C8;"></li>
+        <li id="azure" class="color azure" style=" background-color: #007FFF ; "></li>
+        <li id="blue" class="color blue" style=" background-color:blue;"></li>
+        <li id="pansy" class="color pansy" style=" background-color: #7400A1;"></li>
+        <li id="purple" class="color purple" style=" background-color:purple;"></li>
+        <li id="camellia" class="color camellia" style=" background-color: #E63995;"></li>
+        <li id="crimson" class="color crimson" style=" background-color:crimson;"></li>
+        <li id="red" class="color red" style=" background-color:red;"></li>
+        <li id="orange" class="color orange" style=" background-color:orange;"></li>
+        <li id="yellow" class="color yellow" style=" background-color:yellow;"></li>
     </ol>
     <script src="./js/main.js"></script>
     <script src="//at.alicdn.com/t/font_526973_i47y4c1jhpwx9a4i.js"></script>
