--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
                 <use xlink:href="#icon-download"></use>
             </svg>
     </div>
-    <ul id="lineWidthWaper" class="lineWidth"><li id="thin" class="thin activeLineWidth"></li><li id="middle" class="middle" ></li><li id="thick" class="thick"></li></ul>
+    <ul id="lineWidthWaper" class="lineWidth">
+        <li id="thin" class="thin activeLineWidth"></li>
+        <li id="middle" class="middle" ></li>
+        <li id="thick" class="thick"></li>
+    </ul>
     <svg id="palette" class="icon palette">
         <use xlink:href="#icon-palette"></use>
     </svg>
